--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="movie_poster">Movie poster</string>
+    <string name="sort_by">Sort by</string>
+
+    <string-array name="sorting_options">
+        <item>Popular</item>
+        <item>Top Rated</item>
+    </string-array>
 </resources>
