--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="movie_poster">Movie poster</string>
     <string name="sort_by">Sort by</string>
     <string name="vote_rating_format">%.1f/10</string>
+    <string name="no_connection_error">You have no internet connection, please connect to any available network to retrieve movies.</string>
 
     <string-array name="sorting_options">
         <item>Popular</item>
