--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="sort_by">Sort by</string>
     <string name="vote_rating_format">%.1f/10</string>
     <string name="no_connection_error">You have no internet connection, please connect to any available network to retrieve movies.</string>
+    <string name="play_trailer">Play trailer</string>
 
     <string-array name="sorting_options">
         <item>Popular</item>
